--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -40,40 +40,6 @@
             android:hint="LAST NAME" />
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="date"
-            android:text=""
-            android:background="#ffffff"
-            android:ems="10"
-            android:id="@+id/birthday_textenter"
-            android:layout_weight="1"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="50sp"
-            android:layout_marginRight="5sp"
-            android:hint="BIRTH DATE" />
-
-        <EditText
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:inputType="textPersonName"
-            android:text=""
-            android:background="#ffffff"
-            android:ems="10"
-            android:id="@+id/profession_textenter"
-            android:layout_weight="1"
-            android:layout_marginTop="10dp"
-            android:layout_marginLeft="5sp"
-            android:layout_marginRight="50sp"
-            android:hint="PROFESSION" />
-    </LinearLayout>
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -82,7 +48,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50sp"
         android:layout_marginRight="50sp"
-        android:id="@+id/emailenter_textview"
+        android:id="@+id/emailentersignup"
         android:hint="Email"
         android:background="#ffffff"/>
 
@@ -91,7 +57,7 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/passwordfirst_textview"
+        android:id="@+id/passwordfirstsignup"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50sp"
         android:layout_marginRight="50sp"
@@ -103,7 +69,7 @@
         android:layout_height="wrap_content"
         android:inputType="textEmailAddress"
         android:ems="10"
-        android:id="@+id/confirmpassword_textview"
+        android:id="@+id/passwordsecondsignup"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="50sp"
         android:layout_marginRight="50sp"
@@ -124,4 +90,14 @@
         android:layout_width="106dp"
         android:layout_height="wrap_content"
         android:id="@+id/confirmsignupbtn" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/resultsignup" />
+    </ScrollView>
 </LinearLayout>
